Overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@ body {
   place-items: center;
   max-width: 100vw;
   background-color: #1E1E1E;
+  overflow-x: hidden;
 }
 
